--- a/Formulário/formulario.html
+++ b/Formulário/formulario.html
@@ -8,8 +8,14 @@
     <title>Formulário</title>
 </head>
 <body>
+
+       <!--Container-->
+
     <div class="content">
         <h1>Formulário 💻</h1>
+
+        <!--Inputs-->
+        
         <form id="form">
             <div>
                 <input type="text" placeholder="Digite seu nome" class="inputs required" oninput="Validate">    
@@ -52,6 +58,8 @@
         </form>
 
     </div>
+
+    <!--Botão-->
 
      <button type="submit">Enviar</button>
      <script src="assets/js/main.js"></script>
